# ROS2Dashboard

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  README.md  app.py  cmake_install.cmake  environment.yml  package.xml  rc.py  res.qrc  res_rc.py  ros2dashboard.desktop  update_res.sh
bin_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  log_2023-06-18.txt
bin_debug/.qt/: QtDeploySupport.cmake
bin_debug/ROS2Dashboard_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
ci/: build_appimage.sh
config/: config.ini  config.toml
docs/: About.html  Doxyfile  README.md  description.md  index.html
docs/drawings/: scheme.drawio
docs/html/: _application_8hpp_source.html  _bytes_8hpp_source.html  _daemon_client_8hpp_source.html  _daemon_exception_8hpp_source.html  _generic_text_viz_8hpp_source.html  _logger_8hpp_source.html  _platform_8hpp_source.html  _ros2_connection_8hpp_source.html  _ros2_connection_list_model_8hpp_source.html  _ros2_entity_8hpp_source.html  _ros2_entity_list_model_8hpp_source.html  _ros2_node_8hpp_source.html  _ros2_node_list_model_8hpp_source.html  _ros2_package_8hpp_source.html  _ros2_package_list_model_8hpp_source.html  _ros2_publisher_8hpp_source.html  _ros2_state_8hpp_source.html  _ros2_subscriber_8hpp_source.html  _ros2_topic_8hpp_source.html  _ros2_topic_list_model_8hpp_source.html  _str_utils_8hpp_source.html  _video_viz_8hpp_source.html  _visualizer_model_8hpp_source.html  _viz_component_8hpp_source.html  annotated.html  annotated_dup.js  class_action_client_1_1_action_client-members.html  class_action_client_1_1_action_client.html  class_action_client_1_1_action_client__coll__graph.map  class_action_client_1_1_action_client__coll__graph.md5  class_action_server_1_1_action_server-members.html  class_action_server_1_1_action_server.html  class_action_server_1_1_action_server__coll__graph.md5  class_action_server_1_1_action_server__inherit__graph.map  class_camera_1_1_camera_node-members.html  class_camera_1_1_camera_node.html  class_camera_1_1_camera_node__coll__graph.map  class_camera_1_1_camera_node__coll__graph.md5  class_client_1_1_client-members.html  class_client_1_1_client.html  (+350 more)
docs/latex/: annotated.tex  class_action_client_1_1_action_client.tex  class_action_client_1_1_action_client__coll__graph.md5  class_action_server_1_1_action_server.tex  class_action_server_1_1_action_server__coll__graph.md5  class_camera_1_1_camera_node.tex  class_camera_1_1_camera_node__coll__graph.md5  class_client_1_1_client.tex  class_client_1_1_client__coll__graph.md5  class_graph_edge_1_1_graph_edge.tex  class_graph_edge_1_1_graph_edge__coll__graph.md5  class_main_window_1_1_main_window.tex  class_main_window_1_1_main_window__inherit__graph.md5  class_network_1_1_host.tex  class_network_1_1_host__inherit__graph.md5  class_network_discover_1_1_network_discover.tex  class_network_discover_1_1_network_discover__coll__graph.md5  class_network_manager_1_1_network_manager.tex  class_node_widget_1_1_node_widget.tex  class_node_widget_1_1_node_widget__inherit__graph.md5  class_publisher_1_1_publisher.tex  class_publisher_1_1_publisher__coll__graph.md5  class_ros2_dashboard_1_1_ros2_dashboard.tex  class_ros2_discover_1_1_ros2_discover.tex  class_ros2_discover_1_1_ros2_discover__inherit__graph.md5  class_ros2_monitor_1_1_ros2_monitor.tex  class_ros2_monitor_1_1_ros2_monitor__coll__graph.md5  class_ros2_node_1_1_node_control_widget.tex  class_ros2_node_1_1_node_control_widget__coll__graph.md5  class_ros2_node_1_1_node_control_widget_wrapper.tex  class_ros2_node_1_1_node_control_widget_wrapper__inherit__graph.md5  class_ros2_node_1_1_ros2_node.tex  class_ros2_node_1_1_ros2_node__inherit__graph.md5  class_service_1_1_service.tex  class_service_1_1_service__inherit__graph.md5  class_stereo_1_1_stereo_node.tex  class_stereo_1_1_stereo_node__inherit__graph.md5  class_subscriber_1_1_subscriber.tex  class_subscriber_1_1_subscriber__inherit__graph.md5  class_topic_1_1_topic.tex  (+46 more)
docs/python/: image_subscription.qml  run_sample.sh  sample_webcam_publisher.py  sample_webcam_subscriber.py
install/: local_setup.sh  setup.sh
log/: latest_build
res/ui/: Макет визуальной части 04.06.23(2).rar  вход_выход(1).rar
ros2dashboard/: __init__.py
ros2dashboard/app/: Ros2Dashboard.py  logger.py
ros2dashboard/core/: Config.py  DashboardApp.py  Logger.py  Processes.py  Ros2Dashboard.py  Ros2Storage.py
ros2dashboard/devices/: Camera.py  GenericNode.py  Ros2Node.py  Stereo.py
ros2dashboard/edge/: ActionClient.py  ActionServer.py  Client.py  Executable.py  GraphEdge.py  Package.py  Publisher.py  Service.py  Subscriber.py  Topic.py
ros2dashboard/qml/: GridBackground.qml  Main.qml  Node.qml  NodeGraph.qml  NodeObserver.qml  PackageObserver.qml  Port.qml  RectangleEnch.qml  VisualizationWindow.qml
ros2dashboard/qml_models/: NodeListModel.py  PackageListModel.py
ros2dashboard/ros2utils/: Network.py  NetworkDiscover.py  NetworkManager.py  Ros2Discover.py  Ros2Monitor.py  SpinThread.py
ros2dashboard/rust/rust_ros2monitor/: Cargo.toml  pyproject.toml
ros2dashboard/rust/rust_ros2monitor/src/: lib.rs  main.rs
ros2dashboard/ui/: MainWindow.py  NodeWidget.py  PackageObserver.qml  mainwindow.ui  mainwindow_ui.py  nodewidget.ui  ui_mainwindow.py  ui_nodewidget.py
ros2dashboard/visualizer/: GenericTextVisualizer.py  ImageProvider.py  TopicVisualizer.py  TopicVisualizerNode.py  VideoVisualizer.py  Visualizer.py
samples/: .cloud.ply.swp  RunSamples.sh  SamplePublisherPointCloud.py  SampleSubscriberWebcam.sh  bunny.ply  bunny_small.ply
scripts/: compile_rust.sh  run_rust.sh  update_docs.sh  update_res.sh
src/: main.cpp
src/core/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  DaemonException.cpp  DaemonException.hpp  Logger.cpp  Logger.hpp  Platform.hpp  SensorInfo.hpp  Utils.hpp
src/network/: Bytes.cpp  (+5 more)
templates/: Contact.html  Installation.html  Settings.html
tests/: Ros2NodeTest.py  Ros2Storage_test.py  RunSamples.sh  SamplePublisher.py  SamplePublisherString.py  SamplePublisherWebcam.sh
(+148 files in other folders)
