[package]
name = "rust_ros2monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_ros2monitor"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
rclrs = "0.3.1"
anyhow = {version = "1", features = ["backtrace"]}
rosidl_runtime_rs = "0.3"